--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -5,3 +5,8 @@
     box-sizing: border-box;
     scroll-behavior: smooth;
 }
+
+body{
+    max-width: 100%;
+    overflow-x: hidden;
+}
